# firmware

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  libraries.ini  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s2  sdkconfig.esp32-s3  sdkconfig.lolin_s2_mini  sdkconfig.smartknob.defaults  test.sh
.github/workflows/: build_check.yaml  plantuml.yml
boards/: smartknob-ha-v1.json
components/display_driver/: CMakeLists.txt  config
components/display_driver/include/: DisplayDriver.hpp
components/display_driver/source/: DisplayDriver.cpp
components/filesystem/: CMakeLists.txt  config
components/filesystem/include/: Filesystem.hpp
components/filesystem/src/: Filesystem.cpp
components/light_sensor/: CMakeLists.txt  config
components/light_sensor/include/: LightSensor.hpp  light_sensor.hpp
components/light_sensor/src/: LightSensor.cpp  light_sensor.cpp
components/magnetic_encoder/: CMakeLists.txt  config
components/magnetic_encoder/include/: MagneticEncoder.hpp
components/motor_driver/: CMakeLists.txt  config
components/motor_driver/include/: MotorDriver.hpp
components/motor_driver/src/: MotorDriver.cpp
components/ring_lights/: CMakeLists.txt  config
components/smartknob_config/: Kconfig
components/strain_sensor/: CMakeLists.txt  config
components/ux/: CMakeLists.txt
doc/: diagram.puml
hal/sdl2/: app_hal.c  app_hal.h
scripts/: generateOtaBinary.py  pioFilesystem.py
src/: CMakeLists.txt  Kconfig.projbuild  gui.hpp  main.cpp
(+17 files in other folders)
